# project_template

./: .gitignore  .pre-commit-config.yaml  makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: code-quality.yml
src/: run_pipeline.py
src/configs/: dev.yaml  test.yaml
src/pipeline/: config.py  pipeline.py
src/pipeline/modules/: common.py
tests/pipeline/: test_pipeline.py
tests/pipeline/modules/: test_common.py
