[project]
name = "project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docformatter[dev]>=1.7.5",
    "ipykernel[dev]>=6.29.5",
    "matplotlib>=3.10.0",
    "mypy[dev]>=1.14.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pre-commit[dev]>=4.0.1",
    "pydantic>=2.10.5",
    "pytest-cov[dev]>=6.0.0",
    "pytest-env[dev]>=1.1.5",
    "pytest[dev]>=8.3.4",
    "ruff[dev]>=0.9.1",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "types-requests[dev]>=2.32.0.20241016",
]


[tool.coverage.run]
omit = ["__init__.py"]


[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
select = [
    "A", # Pyflakes: general checks
    "B", # pycodestyle: pycodestyle checks
    "C", # mccabe: complexity checks
    # "D",  # pydocstyle: docstring style checks
    "E",  # pycodestyle: pycodestyle errors
    "F",  # pyflakes: unused imports, variables, etc.
    "I",  # isort: import sorting
    "N",  # pep8-naming: naming conventions
    "S",  # bandit: security checks
    "W",  # pycodestyle: pycodestyle warnings
    "UP", # pyupgrade: upgrade python version syntax
]
fix = true
[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101" # Ignore use of assert detected
]



[tool.pytest.ini_options]
filterwarnings = [
]
env = [
    "ENVIRONMENT=test"
]
